--- a/src/main/webapp/mportals/adminext/user/treeselectDept.html
+++ b/src/main/webapp/mportals/adminext/user/treeselectDept.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
+<html><head><meta charset="utf-8">
 <meta content="webkit" name="renderer">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -9,24 +7,27 @@
 <meta content="width=device-width, initial-scale=1, user-scalable=1" name="viewport">
 <meta content="e-Hualu 易华录  - Powered By JeeSite" name="description">
 <meta content="ThinkGem, http://jeesite.com" name="author">
-<title>选择部门 </title>
-<!-- <script src="/itsm/global.min.js?ctx=/itsm"></script> -->
-<script src="/Quark/statics/jQuery/jquery-1.12.4.min.js"></script>
-<script src="/Quark/statics/jQuery/jquery-migrate-1.4.1.min.js"></script>
-<!--[if lt IE 9]><script src="/Quark/statics/common/h5fix.min.js"></script><![endif]-->
+<title>分配菜单 </title>
+<!-- <script src="/itsm/global.min.js?ctx=/itsm/a"></script> -->
+<script type="text/javascript" src="/Quark/statics/jQuery/jquery-1.12.4.min.js"></script>
+<script type="text/javascript" src="/Quark/statics/jQuery/jquery-migrate-1.4.1.min.js"></script>
+<!--[if lt IE 9]><script src="/itsm/static/common/h5fix.min.js"></script><![endif]-->
 <link rel="stylesheet" href="/Quark/statics/fonts/font-icons.min.css">
 <link rel="stylesheet" href="/Quark/statics/AdminLTE/AdminLTE-2.4.3/bower_components/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/Quark/statics/select2/4.0/select2.css?-07071142">
+<link rel="stylesheet" href="/Quark/statics/select2/4.0/select2.css">
 <link rel="stylesheet" href="/Quark/statics/icheck/1.0/minimal/grey.css">
+<link rel="stylesheet" href="/Quark/statics/jquery-ztree/3.5/css/metro/ztree-bootstrap.css">
+<!-- <link rel="stylesheet" href="/Quark/statics/jquery-ztree/3.5/css/metro/ztree-bootstrap.css"> -->
 <link rel="stylesheet" href="/Quark/statics/jquery-ztree/3.5/css/metro/zTreeStyle.css" charset="utf-8">
-<!--  <link rel="stylesheet" href="/Quark/statics/jquery-plugins/jquery.layout-latest.css"> -->
-<link rel="stylesheet" href="/Quark/statics/AdminLTE/AdminLTE-2.4.3/dist/css/AdminLTE.min.css?-07071142">
-<link rel="stylesheet" href="/Quark/statics/common/jeesite.css?-07071142">
+ <link rel="stylesheet" href="/Quark/statics/jquery-plugins/jquery.layout-latest.css">
+<link rel="stylesheet" href="/Quark/statics/AdminLTE/AdminLTE-2.4.3/dist/css/AdminLTE.min.css">
+<link rel="stylesheet" href="/Quark/statics/common/jeesite.css">
+<!-- <link rel="stylesheet" href="/Quark/statics/common/common.css"> -->
 <link rel="stylesheet" href="/Quark/statics/layer/3.1/skin/default/layer.css" id="layuicss-skinlayercss">
 <link href="/Quark/statics/my97/skin/WdatePicker.css" rel="stylesheet" type="text/css">
-
 </head>
-<body class="hold-transition box box-main">
+<body class="hold-transition box box-main" >
+
 <div class="wrapper"><div class="treeShowHideButton" onclick="search();">
 	<label id="btnShow" title="显示搜索" style="display:none;">︾</label>
 	<label id="btnHide" title="隐藏搜索">︽</label>
@@ -39,52 +40,92 @@
 	<a href="javascript:" onclick="tree.expandAll(true);">展开</a> /
 	<a href="javascript:" onclick="tree.expandAll(false);">折叠</a>
 </div>
-<div id="tree" class="ztree treeselect">
-</div>
-</div>
+<div id="tree" class="ztree"></div>
+
 
 <a id="scroll-up" href="#" class="btn btn-sm"><i class="fa fa-angle-double-up"></i></a>
 <script src="/Quark/statics/AdminLTE/AdminLTE-2.4.3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/Quark/statics/select2/4.0/select2.js?-07071142"></script>
-<script src="/Quark/statics/select2/4.0/i18n/zh_CN.js?-07071142"></script>
-<script src="/Quark/statics/layer/3.1/layer.js?-07071142"></script>
-<script src="/Quark/statics/my97/WdatePicker.js?-07071142"></script>
+<script src="/Quark/statics/select2/4.0/select2.js"></script>
+<script src="/Quark/statics/select2/4.0/i18n/zh_CN.js"></script>
+<script src="/Quark/statics/layer/3.1/layer.js"></script>
+<script src="/Quark/statics/my97/WdatePicker.js"></script>
 <script src="/Quark/statics/jquery-ztree/3.5/js/jquery.ztree.all-3.5.js"></script>
+<!-- <script src="/Quark/statics/jquery-ztree/3.5/js/jquery.ztree.core-3.5.js"></script>
+<script src="/Quark/statics/jquery-ztree/3.5/js/jquery.ztree.excheck-3.5.js"></script> -->
+<script src="/Quark/statics/jquery-validation/1.16/jquery.validate.js"></script>
+<script src="/Quark/statics/jquery-validation/1.16/localization/messages_zh_CN.js"></script>
+<script src="/Quark/statics/jquery-validation/1.16/jquery.validate.extend.js"></script>
 <script src="/Quark/statics/common/jeesite.js"></script>
-<script src="/Quark/statics/common/i18n/jeesite_zh_CN.js"></script> 
-<!-- <script src="/Quark/statics/jQuery/jquery-ui-draggable-1.12.1.min.js"></script>
-<script src="/Quark/statics/jQuery/jquery-ui-effect-1.12.1.min.js"></script>
-<script src="/Quark/statics/jquery-plugins/jquery.layout-latest.js"></script> -->
-
-
+<script src="/Quark/statics/common/i18n/jeesite_zh_CN.js"></script>
+<!-- <script src="/Quark/statics/common/common.js"></script> -->
 <script>
-var setting = {
-	view:{selectedMulti:false,dblClickExpand:false},
-	check:{enable:false,nocheckInherit:true},
-	data:{simpleData:{enable:true}},
-	callback:{
-		onClick:function(event, treeId, treeNode){
-			tree.expandNode(treeNode);
-		},
-		onDblClick: function(event, treeId, treeNode){
-			if(!treeNode.isParent){
-				js.layer.$('#' + window.name).closest('.layui-layer')
-				.find(".layui-layer-btn0").trigger("click");
+/* $("#inputForm").validate({
+	submitHandler: function(form){
+		// 获取数据权限数据
+		var menuData = [];
+		var permissionIdStr="";
+        var treeObj = $.fn.zTree.getZTreeObj("tree");
+        var nodes = treeObj.getCheckedNodes(true);
+        for(var i=0;i<nodes.length;i++){
+            if(i==(nodes.length-1)){
+                permissionIdStr+=nodes[i].id;
+            }else{
+                permissionIdStr+=nodes[i].id+",";
+            }
+        }
+		$("#resourceIds").val(permissionIdStr);
+		// 提交表单数据
+		js.ajaxSubmitForm($(form), function(data){
+			js.showMessage(data.message);
+			if(data.result){
+				js.closeCurrentTabPage(function(contentWindow){
+					contentWindow.page();
+				});
 			}
-			
-		}
-	}
-}, tree, loadTree = function(){
-	$.get("/Quark/dept/ext/deptTree?t=" + new Date().getTime(), function(zNodes){
-		tree = $.fn.zTree.init($("#tree"), setting, zNodes);//.expandAll(true);
-		$.fn.zTree.expandNodeByLevel(tree, -1);
+		}, "json");
+    }
+}); */
+
+//树结构初始化加载
+var setting = {check: {
+    enable: false
+}, view: {
+    showLine: true, //显示辅助线
+    dblClickExpand: true,
+},
+data: {
+    simpleData: {
+        enable: true,
+        idKey: "id",
+        pIdKey: "pId"
+    }
+}
+
+}, tree, loadTree=function(){
+	//var roleid = $("#roleid").val();
+	js.ajaxSubmit("/Quark/dept/ext/deptTree", {ctrlPermi:'2'/*1拥有的权限 2管理的权限*/}, function(zNodes){
+		tree = $.fn.zTree.init($("#tree"), setting, zNodes);
+		tree.expandAll(true);
 		if (zNodes && zNodes.length > 0){
 			var attrName = zNodes[0].value ? 'value' : 'id';
 			var selectCodes = "".split(",");
 			selectCheckNode(attrName, selectCodes);
 		}
-	});
-};loadTree();
+		/* var nodes=tree.getNodes();
+		for(var i=0;i<nodes.length;i++){
+            if(nodes[i].selected){
+            	tree.checkNode(nodes[i],true,true);
+            	//tree.selectNode(nodes[i]);
+            	tree.updateNode(nodes[i]);
+            }
+        } */
+	}, null, null, js.text('加载中...'));
+};
+
+$(function (){
+	loadTree();
+    //setTimeout('loadTree()', 100); //延迟1秒
+  })
 function selectCheckNode(attrName, selectCodes){
 	for(var i=0; i<selectCodes.length; i++) {
 		var isLoadUser = false;
@@ -179,4 +220,5 @@ function search($this) {
 function getTreeObj(){
 	return tree;
 }
-</script></body></html>
+</script>
+</body></html>
