--- a/src/main/webapp/mportals/adminext/user/edit.html
+++ b/src/main/webapp/mportals/adminext/user/edit.html
@@ -51,7 +51,7 @@
 							<div class="col-sm-10">
 								<div class="input-group">
 									<input id="deptOid" name="dept.oid" type="hidden" value="" class="form-control ">
-									<input id="deptName" name="dept.deptname" type="text" value="" class="form-control ">
+									<input id="deptName" name="dept.deptname" type="text" value=""  readonly="readonly" class="form-control required">
 									<span class="input-group-btn"><a id="parentButton" href="javascript:" class="btn btn-default"><i class="fa fa-search"></i></a></span>
 								</div>
 
