--- a/src/main/webapp/mportals/adminext/user/edit.html
+++ b/src/main/webapp/mportals/adminext/user/edit.html
@@ -121,7 +121,7 @@
 <script src="/Quark/statics/AdminLTE/AdminLTE-2.4.3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/Quark/statics/select2/4.0/select2.js?-06130816"></script>
 <script src="/Quark/statics/select2/4.0/i18n/zh_CN.js?-06130816"></script>
-<script src="/Quark/statics/layer/3.1/layer.js"></script>
+<script src="/Quark/statics/layer/3.1/layer2.js"></script>
 <script src="/Quark/statics/my97/WdatePicker.js?-06130816"></script>
 <script src="/Quark/statics/my97/lang/zh_CN.js?-06130816"></script>
 <!-- 
